# slik

./: .gitignore  Anchor.toml  README.md  drizzle.config.ts  package-lock.json  package.json  pitch-deck.html  tsconfig.json
deliverables/: comprehensive_security_assessment_report.md
programs/slik/src/: lib.rs
programs/solanablik/: Cargo.toml
programs/solanablik/src/: lib.rs
src/: proxy.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/[...path]/: route.ts
src/app/api/codes/[code]/resolve/: route.ts
src/app/api/pay/: route.ts
src/app/api/payments/[id]/status/: route.ts
src/app/api/payments/create/: route.ts
src/app/api/payments/link/: route.ts
src/app/api/price/: route.ts
src/app/merchant/: page.tsx
src/app/pay/: page.tsx
src/app/press/: page.tsx
src/app/team/: page.tsx
src/app/vendors/: page.tsx
src/components/: AmountInput.tsx  CodeDisplay.tsx  CodeInput.tsx  Nav.tsx  WalletButton.tsx  WalletProvider.tsx
src/lib/: codes.ts  payment.ts  price.ts  program.ts  solana.ts
src/lib/idl/: solanablik.json  solanablik.ts
