[package]
name = "solanablik"
version = "0.1.0"
description = "SolanaBLIK - BLIK-style payments on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solanablik"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "=0.32.0"
